//TODO: imports act weird, need to fix
syntax = "proto3";

package rpc;

message Comment {
  string commentId = 1;
  string postId = 2;
  int64 createdAt = 3;
  int64 updatedAt = 4;
  User user = 5;
  string content = 6;
  int64 likes = 7;
}

message User {
  string userId = 1;
  string userName = 2;
  string email = 3;
  string provider = 4;
  string profilePictureLink = 5;
  string bio = 6;
  int64 subscribed = 7;
  int64 status = 8;
}

message Location {
  double longitude = 1;
  double latitude = 2;
}